# expressions

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: code-checking.yaml  code-testing.yaml
docs/: CHANGELOG.md  architecture.md  project_structure.md
docs/adrs/: 000_template.rst  index.rst
src/expressions/: __init__.py  context.py  exceptions.py
src/expressions/expr/: __init__.py  arithmetic.py  comparison.py  expr_base.py  expr_types.py  literalboolean.py  literals.py  logical.py  variable.py
src/expressions/parser/: __init__.py  dict_parser.py  json_parser.py  parser.py  primitive_parser.py
src/expressions/serialiser/: dict_serialiser.py  dict_serialiser_init.py
tests/unit/: test_context.py  test_parser.py
tests/unit/expr/: test_arithmetic.py  test_comparison.py  test_literalboolean.py  test_literals.py  test_logical.py  test_variable.py
